Add second part

--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
             <img src="img/cyberpunk.png" alt="cyberpunkpic" class="imageone">
         </div>
     </div>
+
+    <div class="body">
+        <div class="bodyone">
+            <div class="bodytext">Some random information.</div>
+            <div class="container">
+                <div class="picone">
+                    <img src="img/one.jpg" alt="ryan1" class="imagetwo">
+                    <div class="piconetext">This is me. Literally me. No other character can come close to relating to me like this. </div> 
+                </div>
+                <div class="picone">
+                    <img src="img/two.jpg" alt="ryan2" class="imagetwo">
+                    <div class="piconetext">This is me. Literally me. No other character can come close to relating to me like this. </div> 
+                </div>
+                <div class="picone">
+                    <img src="img/three.jpg" alt="ryan3" class="imagetwo">
+                    <div class="piconetext">This is me. Literally me. No other character can come close to relating to me like this. </div> 
+                </div>
+                <div class="picone">
+                    <img src="img/four.jpg" alt="ryan4" class="imagetwo">
+                    <div class="piconetext">This is me. Literally me. No other character can come close to relating to me like this. </div> 
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
   
