--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
                 </div>
             </div>
         </div>
+        <div class="bodytwo">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
+        <div class="bodythree">
+            <div class="containert">
+                <div class="call">Call to action! It's time</div>
+                <div class="sign">Sign up for our product by clicking that button</div>
+            </div>
+            <button class="sigma">Sign up</button>
+        </div>
+        <div class="footer">
+            <div class="top">Copyright  ©   The Odin Project</div>
+        </div>
     </div>
 </body>
 </html>
